--- a/tox.ini
+++ b/tox.ini
@@ -6,6 +6,15 @@ skip_install = True
 skip_missing_interpreters = True
 skipsdist = True
 
+[testenv:nb]
+description =
+    Run all notebooks with pytest
+deps =
+    nbmake
+    pytest
+commands =
+    pytest --nbmake {posargs}
+
 [testenv:sty]
 description =
     Perform all linting, formatting, and spelling checks
@@ -13,3 +22,7 @@ allowlist_externals =
     pre-commit
 commands =
     pre-commit run {posargs} -a
+
+[pytest]
+filterwarnings =
+    ignore:Passing a schema to Validator.iter_errors is deprecated.*:DeprecationWarning
