ci: pass EXECUTE_NB variable to tox nb job

--- a/tox.ini
+++ b/tox.ini
@@ -9,6 +9,8 @@ skipsdist = True
 [testenv:nb]
 description =
     Run all notebooks with pytest
+passenv =
+    EXECUTE_NB
 deps =
     nbmake
     pytest
