--- a/.github/workflows/notebook.yml
+++ b/.github/workflows/notebook.yml
@@ -8,7 +8,7 @@ jobs:
     name: Run all notebooks
     runs-on: ubuntu-20.04
     steps:
-      - uses: actions/checkout@master
+      - uses: actions/checkout@v3
       - uses: actions/setup-python@master
         with:
           python-version: "3.9"
