--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -4,11 +4,11 @@
     "eamodio.gitlens",
     "editorconfig.editorconfig",
     "esbenp.prettier-vscode",
+    "github.vscode-github-actions",
     "ms-python.python",
     "ms-vsliveshare.vsliveshare",
     "redhat.vscode-yaml",
     "streetsidesoftware.code-spell-checker",
-    "travisillig.vscode-json-stable-stringify",
     "tyriar.sort-lines",
     "yzhang.markdown-all-in-one"
   ]
