--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@
 #
 aiofiles==22.1.0
 aiosqlite==0.19.0
-anyio==3.6.2
+anyio==3.7.0
 argon2-cffi==21.3.0
 argon2-cffi-bindings==21.2.0
 arrow==1.2.3
@@ -18,7 +18,7 @@ backcall==0.2.0
 beautifulsoup4==4.12.2
 black==23.3.0
 bleach==6.0.0
-cachetools==5.3.0
+cachetools==5.3.1
 certifi==2023.5.7
 cffi==1.15.1
 cfgv==3.3.1
@@ -27,22 +27,23 @@ charset-normalizer==3.1.0
 click==8.1.3
 colorama==0.4.6
 comm==0.1.3
-contourpy==1.0.7
+contourpy==1.1.0
 cycler==0.11.0
 debugpy==1.6.7
 decorator==5.1.1
 defusedxml==0.7.1
 distlib==0.3.6
+exceptiongroup==1.1.2
 executing==1.2.0
 fastjsonschema==2.17.1
-filelock==3.12.0
-fonttools==4.39.4
+filelock==3.12.2
+fonttools==4.40.0
 fqdn==1.5.1
 identify==2.5.24
 idna==3.4
-importlib-metadata==6.6.0
+importlib-metadata==6.7.0
 importlib-resources==5.12.0
-ipykernel==6.23.1
+ipykernel==6.24.0
 ipython==8.12.2
 ipywidgets==8.0.6
 isoduration==20.11.0
@@ -50,58 +51,59 @@ isort==5.12.0
 jedi==0.18.2
 jinja2==3.1.2
 json5==0.9.14
-jsonpointer==2.3
+jsonpointer==2.4
 jsonschema==4.17.3
-jupyter-client==8.2.0
-jupyter-core==5.3.0
+jupyter-client==8.3.0
+jupyter-core==5.3.1
 jupyter-events==0.6.3
-jupyter-lsp==2.1.0
-jupyter-server==2.5.0
+jupyter-lsp==2.2.0
+jupyter-server==2.7.0
 jupyter-server-terminals==0.4.4
-jupyterlab==4.0.0
+jupyterlab==4.0.2
 jupyterlab-code-formatter==2.2.1
 jupyterlab-pygments==0.2.2
-jupyterlab-server==2.22.1
+jupyterlab-server==2.23.0
 jupyterlab-widgets==3.0.7
 kiwisolver==1.4.4
-markupsafe==2.1.2
+markupsafe==2.1.3
 matplotlib==3.7.1
 matplotlib-inline==0.1.6
-mistune==2.0.5
+mistune==3.0.1
 mypy-extensions==1.0.0
 nbclient==0.8.0
-nbconvert==7.4.0
-nbformat==5.8.0
+nbconvert==7.6.0
+nbformat==5.9.0
 nest-asyncio==1.5.6
 nodeenv==1.8.0
 notebook-shim==0.2.3
-numpy==1.24.3
+numpy==1.24.4
+overrides==7.3.1
 packaging==23.1
 pandocfilters==1.5.0
 parso==0.8.3
 pathspec==0.11.1
 pexpect==4.8.0
 pickleshare==0.7.5
-pillow==9.5.0
+pillow==10.0.0
 pkgutil-resolve-name==1.3.10
-platformdirs==3.5.1
-pluggy==1.0.0
-pre-commit==3.3.2
-prometheus-client==0.16.0
+platformdirs==3.8.0
+pluggy==1.2.0
+pre-commit==3.3.3
+prometheus-client==0.17.0
 prompt-toolkit==3.0.38
 psutil==5.9.5
 ptyprocess==0.7.0
 pure-eval==0.2.2
 pycparser==2.21
 pygments==2.15.1
-pyparsing==3.0.9
-pyproject-api==1.5.1
+pyparsing==3.1.0
+pyproject-api==1.5.2
 pyrsistent==0.19.3
 python-dateutil==2.8.2
 python-json-logger==2.0.7
 pytz==2023.3
 pyyaml==6.0
-pyzmq==25.0.2
+pyzmq==25.1.0
 requests==2.31.0
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
@@ -114,16 +116,16 @@ terminado==0.17.1
 tinycss2==1.2.1
 tomli==2.0.1
 tornado==6.3.2
-tox==4.5.1
+tox==4.6.3
 traitlets==5.9.0
-typing-extensions==4.6.1
-uri-template==1.2.0
-urllib3==2.0.2
-virtualenv==20.23.0
+typing-extensions==4.7.1
+uri-template==1.3.0
+urllib3==2.0.3
+virtualenv==20.23.1
 wcwidth==0.2.6
 webcolors==1.13
 webencodings==0.5.1
-websocket-client==1.5.2
+websocket-client==1.6.1
 widgetsnbextension==4.0.7
 y-py==0.5.9
 ypy-websocket==0.8.2
