--- a/requirements.txt
+++ b/requirements.txt
@@ -6,12 +6,12 @@
 #
 aiofiles==22.1.0
 aiosqlite==0.19.0
-anyio==3.7.0
+anyio==3.7.1
 argon2-cffi==21.3.0
 argon2-cffi-bindings==21.2.0
 arrow==1.2.3
 asttokens==2.2.1
-async-lru==2.0.2
+async-lru==2.0.3
 attrs==23.1.0
 babel==2.12.1
 backcall==0.2.0
@@ -23,8 +23,8 @@ certifi==2023.5.7
 cffi==1.15.1
 cfgv==3.3.1
 chardet==5.1.0
-charset-normalizer==3.1.0
-click==8.1.3
+charset-normalizer==3.2.0
+click==8.1.4
 colorama==0.4.6
 comm==0.1.3
 contourpy==1.1.0
@@ -41,18 +41,19 @@ fonttools==4.40.0
 fqdn==1.5.1
 identify==2.5.24
 idna==3.4
-importlib-metadata==6.7.0
-importlib-resources==5.12.0
+importlib-metadata==6.8.0
+importlib-resources==6.0.0
 ipykernel==6.24.0
 ipython==8.12.2
-ipywidgets==8.0.6
+ipywidgets==8.0.7
 isoduration==20.11.0
 isort==5.12.0
 jedi==0.18.2
 jinja2==3.1.2
 json5==0.9.14
 jsonpointer==2.4
-jsonschema==4.17.3
+jsonschema==4.18.0
+jsonschema-specifications==2023.6.1
 jupyter-client==8.3.0
 jupyter-core==5.3.1
 jupyter-events==0.6.3
@@ -63,10 +64,10 @@ jupyterlab==4.0.2
 jupyterlab-code-formatter==2.2.1
 jupyterlab-pygments==0.2.2
 jupyterlab-server==2.23.0
-jupyterlab-widgets==3.0.7
+jupyterlab-widgets==3.0.8
 kiwisolver==1.4.4
 markupsafe==2.1.3
-matplotlib==3.7.1
+matplotlib==3.7.2
 matplotlib-inline==0.1.6
 mistune==3.0.1
 mypy-extensions==1.0.0
@@ -86,27 +87,28 @@ pexpect==4.8.0
 pickleshare==0.7.5
 pillow==10.0.0
 pkgutil-resolve-name==1.3.10
-platformdirs==3.8.0
+platformdirs==3.8.1
 pluggy==1.2.0
 pre-commit==3.3.3
 prometheus-client==0.17.0
-prompt-toolkit==3.0.38
+prompt-toolkit==3.0.39
 psutil==5.9.5
 ptyprocess==0.7.0
 pure-eval==0.2.2
 pycparser==2.21
 pygments==2.15.1
-pyparsing==3.1.0
-pyproject-api==1.5.2
-pyrsistent==0.19.3
+pyparsing==3.0.9
+pyproject-api==1.5.3
 python-dateutil==2.8.2
 python-json-logger==2.0.7
 pytz==2023.3
 pyyaml==6.0
 pyzmq==25.1.0
+referencing==0.29.1
 requests==2.31.0
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
+rpds-py==0.8.10
 send2trash==1.8.2
 six==1.16.0
 sniffio==1.3.0
@@ -116,7 +118,7 @@ terminado==0.17.1
 tinycss2==1.2.1
 tomli==2.0.1
 tornado==6.3.2
-tox==4.6.3
+tox==4.6.4
 traitlets==5.9.0
 typing-extensions==4.7.1
 uri-template==1.3.0
@@ -126,10 +128,10 @@ wcwidth==0.2.6
 webcolors==1.13
 webencodings==0.5.1
 websocket-client==1.6.1
-widgetsnbextension==4.0.7
+widgetsnbextension==4.0.8
 y-py==0.5.9
 ypy-websocket==0.8.2
-zipp==3.15.0
+zipp==3.16.0
 
 # The following packages are considered to be unsafe in a requirements file:
 # setuptools
