--- a/requirements.txt
+++ b/requirements.txt
@@ -21,29 +21,29 @@ bleach==6.0.0
 cachetools==5.3.1
 certifi==2023.7.22
 cffi==1.15.1
-cfgv==3.3.1
+cfgv==3.4.0
 chardet==5.2.0
 charset-normalizer==3.2.0
 click==8.1.6
 colorama==0.4.6
-comm==0.1.3
+comm==0.1.4
 contourpy==1.1.0
 cycler==0.11.0
-debugpy==1.6.7
+debugpy==1.6.7.post1
 decorator==5.1.1
 defusedxml==0.7.1
 distlib==0.3.7
-exceptiongroup==1.1.2
+exceptiongroup==1.1.3
 executing==1.2.0
 fastjsonschema==2.18.0
 filelock==3.12.2
-fonttools==4.41.1
+fonttools==4.42.0
 fqdn==1.5.1
 identify==2.5.26
 idna==3.4
 importlib-metadata==6.8.0
-importlib-resources==6.0.0
-ipykernel==6.25.0
+importlib-resources==6.0.1
+ipykernel==6.25.1
 ipython==8.12.2
 ipywidgets==8.1.0
 isoduration==20.11.0
@@ -52,7 +52,7 @@ jedi==0.19.0
 jinja2==3.1.2
 json5==0.9.14
 jsonpointer==2.4
-jsonschema==4.18.4
+jsonschema==4.19.0
 jsonschema-specifications==2023.7.1
 jupyter-client==8.3.0
 jupyter-core==5.3.1
@@ -60,7 +60,7 @@ jupyter-events==0.7.0
 jupyter-lsp==2.2.0
 jupyter-server==2.7.0
 jupyter-server-terminals==0.4.4
-jupyterlab==4.0.3
+jupyterlab==4.0.5
 jupyterlab-code-formatter==2.2.1
 jupyterlab-pygments==0.2.2
 jupyterlab-server==2.24.0
@@ -78,7 +78,7 @@ nest-asyncio==1.5.7
 nodeenv==1.8.0
 notebook-shim==0.2.3
 numpy==1.24.4
-overrides==7.3.1
+overrides==7.4.0
 packaging==23.1
 pandocfilters==1.5.0
 parso==0.8.3
@@ -96,15 +96,15 @@ psutil==5.9.5
 ptyprocess==0.7.0
 pure-eval==0.2.2
 pycparser==2.21
-pygments==2.15.1
+pygments==2.16.1
 pyparsing==3.0.9
 pyproject-api==1.5.3
 python-dateutil==2.8.2
 python-json-logger==2.0.7
 pytz==2023.3
 pyyaml==6.0.1
-pyzmq==25.1.0
-referencing==0.30.0
+pyzmq==25.1.1
+referencing==0.30.2
 requests==2.31.0
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
@@ -117,13 +117,13 @@ stack-data==0.6.2
 terminado==0.17.1
 tinycss2==1.2.1
 tomli==2.0.1
-tornado==6.3.2
-tox==4.6.4
+tornado==6.3.3
+tox==4.8.0
 traitlets==5.9.0
 typing-extensions==4.7.1
 uri-template==1.3.0
 urllib3==2.0.4
-virtualenv==20.24.2
+virtualenv==20.24.3
 wcwidth==0.2.6
 webcolors==1.13
 webencodings==0.5.1
