--- a/requirements.txt
+++ b/requirements.txt
@@ -6,17 +6,17 @@
 #
 aiofiles==22.1.0
 aiosqlite==0.19.0
-anyio==3.7.1
-argon2-cffi==21.3.0
+anyio==4.0.0
+argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
 arrow==1.2.3
-asttokens==2.2.1
+asttokens==2.4.0
 async-lru==2.0.4
 attrs==23.1.0
 babel==2.12.1
 backcall==0.2.0
 beautifulsoup4==4.12.2
-black==23.7.0
+black==23.9.0
 bleach==6.0.0
 cachetools==5.3.1
 certifi==2023.7.22
@@ -24,26 +24,26 @@ cffi==1.15.1
 cfgv==3.4.0
 chardet==5.2.0
 charset-normalizer==3.2.0
-click==8.1.6
+click==8.1.7
 colorama==0.4.6
 comm==0.1.4
 contourpy==1.1.0
 cycler==0.11.0
-debugpy==1.6.7.post1
+debugpy==1.7.0
 decorator==5.1.1
 defusedxml==0.7.1
 distlib==0.3.7
 exceptiongroup==1.1.3
 executing==1.2.0
 fastjsonschema==2.18.0
-filelock==3.12.2
-fonttools==4.42.0
+filelock==3.12.3
+fonttools==4.42.1
 fqdn==1.5.1
-identify==2.5.26
+identify==2.5.27
 idna==3.4
 importlib-metadata==6.8.0
 importlib-resources==6.0.1
-ipykernel==6.25.1
+ipykernel==6.25.2
 ipython==8.12.2
 ipywidgets==8.1.0
 isoduration==20.11.0
@@ -54,25 +54,25 @@ json5==0.9.14
 jsonpointer==2.4
 jsonschema==4.19.0
 jsonschema-specifications==2023.7.1
-jupyter-client==8.3.0
+jupyter-client==8.3.1
 jupyter-core==5.3.1
 jupyter-events==0.7.0
 jupyter-lsp==2.2.0
-jupyter-server==2.7.2
+jupyter-server==2.7.3
 jupyter-server-terminals==0.4.4
 jupyterlab==4.0.5
 jupyterlab-code-formatter==2.2.1
 jupyterlab-pygments==0.2.2
 jupyterlab-server==2.24.0
 jupyterlab-widgets==3.0.8
-kiwisolver==1.4.4
+kiwisolver==1.4.5
 markupsafe==2.1.3
 matplotlib==3.7.2
 matplotlib-inline==0.1.6
 mistune==3.0.1
 mypy-extensions==1.0.0
 nbclient==0.8.0
-nbconvert==7.7.3
+nbconvert==7.8.0
 nbformat==5.9.2
 nest-asyncio==1.5.7
 nodeenv==1.8.0
@@ -88,8 +88,8 @@ pickleshare==0.7.5
 pillow==10.0.0
 pkgutil-resolve-name==1.3.10
 platformdirs==3.10.0
-pluggy==1.2.0
-pre-commit==3.3.3
+pluggy==1.3.0
+pre-commit==3.4.0
 prometheus-client==0.17.1
 prompt-toolkit==3.0.39
 psutil==5.9.5
@@ -98,36 +98,36 @@ pure-eval==0.2.2
 pycparser==2.21
 pygments==2.16.1
 pyparsing==3.0.9
-pyproject-api==1.5.3
+pyproject-api==1.6.1
 python-dateutil==2.8.2
 python-json-logger==2.0.7
-pytz==2023.3
+pytz==2023.3.post1
 pyyaml==6.0.1
 pyzmq==25.1.1
 referencing==0.30.2
 requests==2.31.0
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
-rpds-py==0.9.2
+rpds-py==0.10.2
 send2trash==1.8.2
 six==1.16.0
 sniffio==1.3.0
-soupsieve==2.4.1
+soupsieve==2.5
 stack-data==0.6.2
 terminado==0.17.1
 tinycss2==1.2.1
 tomli==2.0.1
 tornado==6.3.3
-tox==4.8.0
+tox==4.11.3
 traitlets==5.9.0
 typing-extensions==4.7.1
 uri-template==1.3.0
 urllib3==2.0.4
-virtualenv==20.24.3
+virtualenv==20.24.5
 wcwidth==0.2.6
 webcolors==1.13
 webencodings==0.5.1
-websocket-client==1.6.1
+websocket-client==1.6.2
 widgetsnbextension==4.0.8
 y-py==0.5.9
 ypy-websocket==0.8.2
