--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -25,6 +25,11 @@ repos:
       - id: mixed-line-ending
       - id: trailing-whitespace
 
+  - repo: https://github.com/ComPWA/repo-maintenance
+    rev: 0.0.199
+    hooks:
+      - id: colab-toc-visible
+
   - repo: https://github.com/asottile/blacken-docs
     rev: 1.16.0
     hooks:
