--- a/requirements.txt
+++ b/requirements.txt
@@ -9,85 +9,85 @@ aiosqlite==0.19.0
 anyio==4.0.0
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
-arrow==1.2.3
+arrow==1.3.0
 asttokens==2.4.0
 async-lru==2.0.4
 attrs==23.1.0
-babel==2.12.1
+babel==2.13.0
 backcall==0.2.0
 beautifulsoup4==4.12.2
-black==23.9.0
+black==23.9.1
 bleach==6.0.0
 cachetools==5.3.1
 certifi==2023.7.22
-cffi==1.15.1
+cffi==1.16.0
 cfgv==3.4.0
 chardet==5.2.0
-charset-normalizer==3.2.0
+charset-normalizer==3.3.0
 click==8.1.7
 colorama==0.4.6
 comm==0.1.4
-contourpy==1.1.0
-cycler==0.11.0
-debugpy==1.7.0
+contourpy==1.1.1
+cycler==0.12.0
+debugpy==1.8.0
 decorator==5.1.1
 defusedxml==0.7.1
 distlib==0.3.7
 exceptiongroup==1.1.3
-executing==1.2.0
-fastjsonschema==2.18.0
-filelock==3.12.3
-fonttools==4.42.1
+executing==2.0.0
+fastjsonschema==2.18.1
+filelock==3.12.4
+fonttools==4.43.0
 fqdn==1.5.1
-identify==2.5.27
+identify==2.5.30
 idna==3.4
 importlib-metadata==6.8.0
-importlib-resources==6.0.1
+importlib-resources==6.1.0
 ipykernel==6.25.2
-ipython==8.12.2
-ipywidgets==8.1.0
+ipython==8.12.3
+ipywidgets==8.1.1
 isoduration==20.11.0
 isort==5.12.0
-jedi==0.19.0
+jedi==0.19.1
 jinja2==3.1.2
 json5==0.9.14
 jsonpointer==2.4
-jsonschema==4.19.0
+jsonschema==4.19.1
 jsonschema-specifications==2023.7.1
 jupyter-client==8.3.1
-jupyter-core==5.3.1
+jupyter-core==5.3.2
 jupyter-events==0.7.0
 jupyter-lsp==2.2.0
 jupyter-server==2.7.3
 jupyter-server-terminals==0.4.4
-jupyterlab==4.0.5
+jupyterlab==4.0.6
 jupyterlab-code-formatter==2.2.1
 jupyterlab-pygments==0.2.2
-jupyterlab-server==2.24.0
-jupyterlab-widgets==3.0.8
+jupyterlab-server==2.25.0
+jupyterlab-widgets==3.0.9
 kiwisolver==1.4.5
 markupsafe==2.1.3
-matplotlib==3.7.2
+matplotlib==3.7.3
 matplotlib-inline==0.1.6
-mistune==3.0.1
+mistune==3.0.2
 mypy-extensions==1.0.0
 nbclient==0.8.0
 nbconvert==7.8.0
 nbformat==5.9.2
-nest-asyncio==1.5.7
+nest-asyncio==1.5.8
 nodeenv==1.8.0
 notebook-shim==0.2.3
 numpy==1.24.4
 overrides==7.4.0
-packaging==23.1
+packaging==23.2
 pandocfilters==1.5.0
 parso==0.8.3
 pathspec==0.11.2
 pexpect==4.8.0
 pickleshare==0.7.5
-pillow==10.0.0
+pillow==10.0.1
 pkgutil-resolve-name==1.3.10
-platformdirs==3.10.0
+platformdirs==3.11.0
 pluggy==1.3.0
 pre-commit==3.4.0
 prometheus-client==0.17.1
@@ -97,7 +97,7 @@ ptyprocess==0.7.0
 pure-eval==0.2.2
 pycparser==2.21
 pygments==2.16.1
-pyparsing==3.0.9
+pyparsing==3.1.1
 pyproject-api==1.6.1
 python-dateutil==2.8.2
 python-json-logger==2.0.7
@@ -108,30 +108,31 @@ referencing==0.30.2
 requests==2.31.0
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
-rpds-py==0.10.2
+rpds-py==0.10.3
 send2trash==1.8.2
 six==1.16.0
 sniffio==1.3.0
 soupsieve==2.5
-stack-data==0.6.2
+stack-data==0.6.3
 terminado==0.17.1
 tinycss2==1.2.1
 tomli==2.0.1
 tornado==6.3.3
 tox==4.11.3
-traitlets==5.9.0
-typing-extensions==4.7.1
+traitlets==5.11.1
+types-python-dateutil==2.8.19.14
+typing-extensions==4.8.0
 uri-template==1.3.0
-urllib3==2.0.4
+urllib3==2.0.6
 virtualenv==20.24.5
-wcwidth==0.2.6
+wcwidth==0.2.8
 webcolors==1.13
 webencodings==0.5.1
-websocket-client==1.6.2
-widgetsnbextension==4.0.8
+websocket-client==1.6.3
+widgetsnbextension==4.0.9
 y-py==0.5.9
 ypy-websocket==0.8.2
-zipp==3.16.2
+zipp==3.17.0
 
 # The following packages are considered to be unsafe in a requirements file:
 # setuptools
