--- a/requirements.txt
+++ b/requirements.txt
@@ -9,46 +9,46 @@ aiosqlite==0.19.0
 anyio==4.0.0
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
-arrow==1.2.3
+arrow==1.3.0
 asttokens==2.4.0
 async-lru==2.0.4
 attrs==23.1.0
-babel==2.12.1
+babel==2.13.0
 backcall==0.2.0
 beautifulsoup4==4.12.2
 black==23.9.1
 bleach==6.0.0
 cachetools==5.3.1
 certifi==2023.7.22
-cffi==1.15.1
+cffi==1.16.0
 cfgv==3.4.0
 chardet==5.2.0
-charset-normalizer==3.2.0
+charset-normalizer==3.3.0
 click==8.1.7
 colorama==0.4.6
 comm==0.1.4
 contourpy==1.1.1
-cycler==0.11.0
+cycler==0.12.0
 debugpy==1.8.0
 decorator==5.1.1
 defusedxml==0.7.1
 distlib==0.3.7
 exceptiongroup==1.1.3
-executing==1.2.0
-fastjsonschema==2.18.0
+executing==2.0.0
+fastjsonschema==2.18.1
 filelock==3.12.4
-fonttools==4.42.1
+fonttools==4.43.0
 fqdn==1.5.1
-identify==2.5.29
+identify==2.5.30
 idna==3.4
 importlib-metadata==6.8.0
 importlib-resources==6.1.0
 ipykernel==6.25.2
-ipython==8.12.2
+ipython==8.12.3
 ipywidgets==8.1.1
 isoduration==20.11.0
 isort==5.12.0
-jedi==0.19.0
+jedi==0.19.1
 jinja2==3.1.2
 json5==0.9.14
 jsonpointer==2.4
@@ -69,7 +69,7 @@ kiwisolver==1.4.5
 markupsafe==2.1.3
 matplotlib==3.7.3
 matplotlib-inline==0.1.6
-mistune==3.0.1
+mistune==3.0.2
 mypy-extensions==1.0.0
 nbclient==0.8.0
 nbconvert==7.8.0
@@ -79,7 +79,7 @@ nodeenv==1.8.0
 notebook-shim==0.2.3
 numpy==1.24.4
 overrides==7.4.0
-packaging==23.1
+packaging==23.2
 pandocfilters==1.5.0
 parso==0.8.3
 pathspec==0.11.2
@@ -87,7 +87,7 @@ pexpect==4.8.0
 pickleshare==0.7.5
 pillow==10.0.1
 pkgutil-resolve-name==1.3.10
-platformdirs==3.10.0
+platformdirs==3.11.0
 pluggy==1.3.0
 pre-commit==3.4.0
 prometheus-client==0.17.1
@@ -113,17 +113,19 @@ send2trash==1.8.2
 six==1.16.0
 sniffio==1.3.0
 soupsieve==2.5
-stack-data==0.6.2
+stack-data==0.6.3
 terminado==0.17.1
 tinycss2==1.2.1
 tomli==2.0.1
 tornado==6.3.3
 tox==4.11.3
-traitlets==5.10.1
+traitlets==5.11.1
+types-python-dateutil==2.8.19.14
 typing-extensions==4.8.0
+uri-template==1.3.0
 urllib3==2.0.6
 virtualenv==20.24.5
-wcwidth==0.2.6
+wcwidth==0.2.8
 webcolors==1.13
 webencodings==0.5.1
 websocket-client==1.6.3
