MAINT: synchronize ComPWA dev setup

--- a/.editorconfig
+++ b/.editorconfig
@@ -2,22 +2,19 @@ root = true
 
 [*]
 end_of_line = lf
+indent_size = 2
 indent_style = space
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[Makefile]
-indent_style = tab
+[*.{ipynb,md}]
+indent_size = unset
 
 [*.{py,toml}]
 indent_size = 4
 
-[*.{json,yaml,yml}]
-indent_size = 2
+[LICENSE]
+indent_size = unset
 
-[*.{rst,inc}]
-indent_size = 2
-
-# when adding words through vscode, this is the resulting output format
-[.cspell.json]
+[setup.cfg]
 indent_size = 4
