--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -33,6 +33,7 @@ repos:
       - id: check-dev-files
         args:
           - --no-cspell-update
+          - --no-github-actions
           - --no-gitpod
           - --no-prettierrc
           - --no-pypi
