--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,13 +3,24 @@
     "eamodio.gitlens",
     "editorconfig.editorconfig",
     "esbenp.prettier-vscode",
+    "garaioag.garaio-vscode-unwanted-recommendations",
     "github.vscode-github-actions",
+    "ms-python.black-formatter",
+    "ms-python.flake8",
+    "ms-python.isort",
     "ms-python.python",
     "ms-vsliveshare.vsliveshare",
     "redhat.vscode-yaml",
+    "stkb.rewrap",
     "streetsidesoftware.code-spell-checker",
     "tamasfe.even-better-toml",
     "tyriar.sort-lines",
     "yzhang.markdown-all-in-one"
+  ],
+  "unwantedRecommendations": [
+    "bungcip.better-toml",
+    "davidanson.vscode-markdownlint",
+    "ms-python.pylint",
+    "travisillig.vscode-json-stable-stringify"
   ]
 }
