FIX: revert Conda environment definition
* DX: apply new ComPWA dev settings

--- a/environment.yml
+++ b/environment.yml
@@ -4,6 +4,8 @@ dependencies:
   - pip>=19
   - graphviz
   - pip:
-      - -e .[dev]
+      - >-
+        -c requirements.txt
+        -r requirements.in
 variables:
   PRETTIER_LEGACY_CLI: "1"
