--- a/requirements.txt
+++ b/requirements.txt
@@ -26,7 +26,7 @@ chardet==5.2.0
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
-comm==0.2.0
+comm==0.2.1
 contourpy==1.1.1
 cycler==0.12.1
 debugpy==1.8.0
@@ -55,10 +55,10 @@ jsonpointer==2.4
 jsonschema==4.20.0
 jsonschema-specifications==2023.12.1
 jupyter-client==8.6.0
-jupyter-core==5.5.1
+jupyter-core==5.7.1
 jupyter-events==0.9.0
 jupyter-lsp==2.2.1
-jupyter-server==2.12.1
+jupyter-server==2.12.2
 jupyter-server-terminals==0.5.1
 jupyterlab==4.0.10
 jupyterlab-code-formatter==2.2.1
@@ -72,7 +72,7 @@ matplotlib-inline==0.1.6
 mistune==3.0.2
 mypy-extensions==1.0.0
 nbclient==0.9.0
-nbconvert==7.13.1
+nbconvert==7.14.0
 nbformat==5.9.2
 nest-asyncio==1.5.8
 nodeenv==1.8.0
@@ -85,7 +85,7 @@ parso==0.8.3
 pathspec==0.12.1
 pexpect==4.9.0
 pickleshare==0.7.5
-pillow==10.1.0
+pillow==10.2.0
 pkgutil-resolve-name==1.3.10
 platformdirs==4.1.0
 pluggy==1.3.0
@@ -104,7 +104,7 @@ python-json-logger==2.0.7
 pytz==2023.3.post1
 pyyaml==6.0.1
 pyzmq==25.1.2
-referencing==0.32.0
+referencing==0.32.1
 requests==2.31.0
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
@@ -119,13 +119,13 @@ tinycss2==1.2.1
 tomli==2.0.1
 tornado==6.4
 tox==4.11.4
-traitlets==5.14.0
-types-python-dateutil==2.8.19.14
+traitlets==5.14.1
+types-python-dateutil==2.8.19.20240106
 typing-extensions==4.9.0
 uri-template==1.3.0
 urllib3==2.1.0
 virtualenv==20.25.0
-wcwidth==0.2.12
+wcwidth==0.2.13
 webcolors==1.13
 webencodings==0.5.1
 websocket-client==1.7.0
