--- a/requirements.txt
+++ b/requirements.txt
@@ -16,10 +16,10 @@ attrs==23.2.0
 babel==2.14.0
 backcall==0.2.0
 beautifulsoup4==4.12.3
-black==23.12.1
+black==24.1.1
 bleach==6.1.0
 cachetools==5.3.2
-certifi==2023.11.17
+certifi==2024.2.2
 cffi==1.16.0
 cfgv==3.4.0
 chardet==5.2.0
@@ -52,21 +52,21 @@ jedi==0.19.1
 jinja2==3.1.3
 json5==0.9.14
 jsonpointer==2.4
-jsonschema==4.21.0
+jsonschema==4.21.1
 jsonschema-specifications==2023.12.1
 jupyter-client==8.6.0
 jupyter-core==5.7.1
 jupyter-events==0.9.0
 jupyter-lsp==2.2.2
 jupyter-server==2.12.5
-jupyter-server-terminals==0.5.1
-jupyterlab==4.0.10
+jupyter-server-terminals==0.5.2
+jupyterlab==4.0.12
 jupyterlab-code-formatter==2.2.1
 jupyterlab-pygments==0.3.0
 jupyterlab-server==2.25.2
 jupyterlab-widgets==3.0.9
 kiwisolver==1.4.5
-markupsafe==2.1.3
+markupsafe==2.1.4
 matplotlib==3.7.4
 matplotlib-inline==0.1.6
 mistune==3.0.2
@@ -74,11 +74,11 @@ mypy-extensions==1.0.0
 nbclient==0.9.0
 nbconvert==7.14.2
 nbformat==5.9.2
-nest-asyncio==1.5.9
+nest-asyncio==1.6.0
 nodeenv==1.8.0
 notebook-shim==0.2.3
 numpy==1.24.4
-overrides==7.4.0
+overrides==7.7.0
 packaging==23.2
 pandocfilters==1.5.1
 parso==0.8.3
@@ -87,12 +87,12 @@ pexpect==4.9.0
 pickleshare==0.7.5
 pillow==10.2.0
 pkgutil-resolve-name==1.3.10
-platformdirs==4.1.0
-pluggy==1.3.0
+platformdirs==4.2.0
+pluggy==1.4.0
 pre-commit==3.5.0
 prometheus-client==0.19.0
 prompt-toolkit==3.0.43
-psutil==5.9.7
+psutil==5.9.8
 ptyprocess==0.7.0
 pure-eval==0.2.2
 pycparser==2.21
@@ -101,10 +101,10 @@ pyparsing==3.1.1
 pyproject-api==1.6.1
 python-dateutil==2.8.2
 python-json-logger==2.0.7
-pytz==2023.3.post1
+pytz==2024.1
 pyyaml==6.0.1
 pyzmq==25.1.2
-referencing==0.32.1
+referencing==0.33.0
 requests==2.31.0
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
@@ -123,7 +123,7 @@ traitlets==5.14.1
 types-python-dateutil==2.8.19.20240106
 typing-extensions==4.9.0
 uri-template==1.3.0
-urllib3==2.1.0
+urllib3==2.2.0
 virtualenv==20.25.0
 wcwidth==0.2.13
 webcolors==1.13
