--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,8 @@
 #    pip-compile --no-annotate --strip-extras requirements.in
 #
 aiofiles==22.1.0
-aiosqlite==0.19.0
-anyio==4.2.0
+aiosqlite==0.20.0
+anyio==4.3.0
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
 arrow==1.3.0
@@ -16,123 +16,126 @@ attrs==23.2.0
 babel==2.14.0
 backcall==0.2.0
 beautifulsoup4==4.12.3
-black==23.12.1
+black==24.3.0
 bleach==6.1.0
-cachetools==5.3.2
-certifi==2023.11.17
+cachetools==5.3.3
+certifi==2024.2.2
 cffi==1.16.0
 cfgv==3.4.0
 chardet==5.2.0
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
-comm==0.2.1
+comm==0.2.2
 contourpy==1.1.1
 cycler==0.12.1
-debugpy==1.8.0
+debugpy==1.8.1
 decorator==5.1.1
 defusedxml==0.7.1
 distlib==0.3.8
 exceptiongroup==1.2.0
 executing==2.0.1
 fastjsonschema==2.19.1
-filelock==3.13.1
-fonttools==4.47.2
+filelock==3.13.3
+fonttools==4.50.0
 fqdn==1.5.1
-identify==2.5.33
+h11==0.14.0
+httpcore==1.0.5
+httpx==0.27.0
+identify==2.5.35
 idna==3.6
-importlib-metadata==7.0.1
-importlib-resources==6.1.1
-ipykernel==6.29.0
+importlib-metadata==7.1.0
+importlib-resources==6.4.0
+ipykernel==6.29.4
 ipython==8.12.3
-ipywidgets==8.1.1
+ipywidgets==8.1.2
 isoduration==20.11.0
 isort==5.13.2
 jedi==0.19.1
 jinja2==3.1.3
-json5==0.9.14
+json5==0.9.24
 jsonpointer==2.4
-jsonschema==4.21.0
+jsonschema==4.21.1
 jsonschema-specifications==2023.12.1
-jupyter-client==8.6.0
-jupyter-core==5.7.1
-jupyter-events==0.9.0
-jupyter-lsp==2.2.2
-jupyter-server==2.12.5
-jupyter-server-terminals==0.5.1
-jupyterlab==4.0.10
+jupyter-client==8.6.1
+jupyter-core==5.7.2
+jupyter-events==0.10.0
+jupyter-lsp==2.2.4
+jupyter-server==2.13.0
+jupyter-server-terminals==0.5.3
+jupyterlab==4.1.5
 jupyterlab-code-formatter==2.2.1
 jupyterlab-pygments==0.3.0
-jupyterlab-server==2.25.2
-jupyterlab-widgets==3.0.9
+jupyterlab-server==2.25.4
+jupyterlab-widgets==3.0.10
 kiwisolver==1.4.5
-markupsafe==2.1.3
-matplotlib==3.7.4
+markupsafe==2.1.5
+matplotlib==3.7.5
 matplotlib-inline==0.1.6
 mistune==3.0.2
 mypy-extensions==1.0.0
-nbclient==0.9.0
-nbconvert==7.14.2
-nbformat==5.9.2
-nest-asyncio==1.5.9
+nbclient==0.10.0
+nbconvert==7.16.3
+nbformat==5.10.3
+nest-asyncio==1.6.0
 nodeenv==1.8.0
-notebook-shim==0.2.3
+notebook-shim==0.2.4
 numpy==1.24.4
-overrides==7.4.0
-packaging==23.2
+overrides==7.7.0
+packaging==24.0
 pandocfilters==1.5.1
 parso==0.8.3
 pathspec==0.12.1
 pexpect==4.9.0
 pickleshare==0.7.5
-pillow==10.2.0
+pillow==10.3.0
 pkgutil-resolve-name==1.3.10
-platformdirs==4.1.0
-pluggy==1.3.0
+platformdirs==4.2.0
+pluggy==1.4.0
 pre-commit==3.5.0
-prometheus-client==0.19.0
+prometheus-client==0.20.0
 prompt-toolkit==3.0.43
-psutil==5.9.7
+psutil==5.9.8
 ptyprocess==0.7.0
 pure-eval==0.2.2
-pycparser==2.21
+pycparser==2.22
 pygments==2.17.2
-pyparsing==3.1.1
+pyparsing==3.1.2
 pyproject-api==1.6.1
-python-dateutil==2.8.2
+python-dateutil==2.9.0.post0
 python-json-logger==2.0.7
-pytz==2023.3.post1
+pytz==2024.1
 pyyaml==6.0.1
 pyzmq==25.1.2
-referencing==0.32.1
+referencing==0.34.0
 requests==2.31.0
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
-rpds-py==0.17.1
+rpds-py==0.18.0
 send2trash==1.8.2
 six==1.16.0
-sniffio==1.3.0
+sniffio==1.3.1
 soupsieve==2.5
 stack-data==0.6.3
-terminado==0.18.0
+terminado==0.18.1
 tinycss2==1.2.1
 tomli==2.0.1
 tornado==6.4
-tox==4.12.1
-traitlets==5.14.1
-types-python-dateutil==2.8.19.20240106
-typing-extensions==4.9.0
+tox==4.14.2
+traitlets==5.14.2
+types-python-dateutil==2.9.0.20240316
+typing-extensions==4.10.0
 uri-template==1.3.0
-urllib3==2.1.0
-virtualenv==20.25.0
+urllib3==2.2.1
+virtualenv==20.25.1
 wcwidth==0.2.13
 webcolors==1.13
 webencodings==0.5.1
 websocket-client==1.7.0
-widgetsnbextension==4.0.9
+widgetsnbextension==4.0.10
 y-py==0.5.9
 ypy-websocket==0.8.2
-zipp==3.17.0
+zipp==3.18.1
 
 # The following packages are considered to be unsafe in a requirements file:
 # setuptools
