--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -40,6 +40,7 @@
   "multiDiffEditor.experimental.enabled": true,
   "python.analysis.autoImportCompletions": false,
   "python.languageServer": "Pylance",
+  "python.terminal.activateEnvironment": false,
   "python.testing.unittestEnabled": false,
   "redhat.telemetry.enabled": false,
   "rewrap.wrappingColumn": 88,
