--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -39,7 +39,7 @@ repos:
             metadata.vscode
 
   - repo: https://github.com/ComPWA/policy
-    rev: 0.3.17
+    rev: 0.3.18
     hooks:
       - id: check-dev-files
         args:
@@ -48,22 +48,20 @@ repos:
           - --no-gitpod
           - --no-prettierrc
           - --no-pypi
-          - --no-python
-          - --no-ruff
           - --no-version-branches
           - --repo-name=ComPWA-demo
           - --repo-title="ComPWA demos"
       - id: colab-toc-visible
       - id: remove-empty-tags
 
-  - repo: https://github.com/nbQA-dev/nbQA
-    rev: 1.8.7
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: v0.5.6
     hooks:
-      - id: nbqa-flake8
-      - id: nbqa-isort
-      - id: nbqa-pyupgrade
-        args:
-          - --py36-plus
+      - id: ruff
+        args: [--fix]
+        types_or: [python, pyi, jupyter]
+      - id: ruff-format
+        types_or: [python, pyi, jupyter]
 
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.6.0
@@ -82,11 +80,6 @@ repos:
       - id: mixed-line-ending
       - id: trailing-whitespace
 
-  - repo: https://github.com/asottile/blacken-docs
-    rev: 1.18.0
-    hooks:
-      - id: blacken-docs
-
   - repo: https://github.com/pre-commit/mirrors-prettier
     rev: v4.0.0-alpha.8
     hooks:
@@ -103,11 +96,6 @@ repos:
       - id: toml-sort
         args:
           - --in-place
-
-  - repo: https://github.com/psf/black
-    rev: 24.8.0
-    hooks:
-      - id: black-jupyter
 
   - repo: https://github.com/streetsidesoftware/cspell-cli
     rev: v8.13.1
