--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,26 +1,81 @@
-[tool.black]
-target-version = [
-    "py36",
-    "py37",
-    "py38",
-    "py39",
-]
-
-[tool.isort]
-profile = "black"
-
-[tool.nbqa.addopts]
-flake8 = [
-    "--extend-ignore=E402,E501",
-]
-
 [tool.pytest.ini_options]
 addopts = [
+    "--color=yes",
     "--durations=0",
 ]
 filterwarnings = [
     "ignore:Passing a schema to Validator.iter_errors is deprecated.*:DeprecationWarning",
 ]
+
+[tool.ruff]
+extend-include = ["*.ipynb"]
+preview = true
+show-fixes = true
+target-version = "py37"
+
+[tool.ruff.format]
+docstring-code-format = true
+line-ending = "lf"
+
+[tool.ruff.lint]
+ignore = [
+    "ANN401",
+    "COM812",
+    "CPY001",
+    "D101",
+    "D102",
+    "D103",
+    "D105",
+    "D107",
+    "D203",
+    "D213",
+    "D407",
+    "D416",
+    "DOC",
+    "E501",
+    "FURB101",
+    "FURB103",
+    "FURB140",
+    "G004",
+    "ISC001",
+    "PLW1514",
+    "PT001",
+    "PTH",
+    "SIM108",
+]
+select = ["ALL"]
+task-tags = ["cspell"]
+
+[tool.ruff.lint.flake8-builtins]
+builtins-ignorelist = ["display"]
+
+[tool.ruff.lint.flake8-comprehensions]
+allow-dict-calls-with-keyword-arguments = true
+
+[tool.ruff.lint.isort]
+split-on-trailing-comma = false
+
+[tool.ruff.lint.per-file-ignores]
+"*.ipynb" = [
+    "ANN",
+    "B018",
+    "C90",
+    "D",
+    "E303",
+    "E703",
+    "N806",
+    "N816",
+    "PLR09",
+    "PLR2004",
+    "PLW0602",
+    "PLW0603",
+    "S101",
+    "T20",
+    "TCH00",
+]
+
+[tool.ruff.lint.pydocstyle]
+convention = "google"
 
 [tool.tomlsort]
 all = false
