--- a/tox.ini
+++ b/tox.ini
@@ -15,10 +15,12 @@ deps =
 description =
     Run all notebooks with pytest
 passenv =
-    EXECUTE_NB
+    *
 
 [testenv:sty]
 allowlist_externals =
     pre-commit
 commands =
     pre-commit run {posargs} -a
+passenv =
+    *
