--- a/tox.ini
+++ b/tox.ini
@@ -24,3 +24,14 @@ commands =
     pre-commit run {posargs} -a
 passenv =
     *
+
+[testenv:update-constraints]
+allowlist_externals =
+    uv
+commands =
+    uv pip compile requirements.in -o requirements.txt --no-annotate --strip-extras --upgrade
+    uv pip compile binder/requirements.in -o binder/requirements.txt --no-annotate --strip-extras --upgrade
+description =
+    Update all pip constraint files`
+passenv =
+    *
