DX: run `pytest` from virtual environment

--- a/tox.ini
+++ b/tox.ini
@@ -7,11 +7,10 @@ skip_missing_interpreters = True
 skipsdist = True
 
 [testenv:nb]
+allowlist_externals =
+    pytest
 commands =
     pytest --nbmake {posargs}
-deps =
-    nbmake
-    pytest
 description =
     Run all notebooks with pytest
 passenv =
