--- a/requirements.txt
+++ b/requirements.txt
@@ -37,6 +37,7 @@ identify==2.6.0
 idna==3.7
 importlib-metadata==8.2.0
 importlib-resources==6.4.0
+iniconfig==2.0.0
 ipykernel==6.29.5
 ipython==8.18.1
 ipywidgets==8.1.3
@@ -63,9 +64,10 @@ markupsafe==2.1.5
 matplotlib==3.9.1.post1
 matplotlib-inline==0.1.7
 mistune==3.0.2
-nbclient==0.10.0
+nbclient==0.6.8
 nbconvert==7.16.4
 nbformat==5.10.4
+nbmake==1.5.4
 nest-asyncio==1.6.0
 nodeenv==1.9.1
 notebook-shim==0.2.4
@@ -88,6 +90,7 @@ pycparser==2.22
 pygments==2.18.0
 pyparsing==3.1.2
 pyproject-api==1.7.1
+pytest==8.3.2
 python-dateutil==2.9.0.post0
 python-json-logger==2.0.7
 pyyaml==6.0.2
