--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ babel==2.16.0
 beautifulsoup4==4.12.3
 bleach==6.1.0
 cachetools==5.4.0
+cattrs==23.2.3
 certifi==2024.7.4
 cffi==1.17.0
 cfgv==3.4.0
@@ -24,12 +25,15 @@ debugpy==1.8.5
 decorator==5.1.1
 defusedxml==0.7.1
 distlib==0.3.8
+docstring-to-markdown==0.15
 exceptiongroup==1.2.2
 executing==2.0.1
 fastjsonschema==2.20.0
 filelock==3.15.4
 fonttools==4.53.1
 fqdn==1.5.1
+gitdb==4.0.11
+gitpython==3.1.43
 h11==0.14.0
 httpcore==1.0.5
 httpx==0.27.0
@@ -53,19 +57,24 @@ jupyter-core==5.7.2
 jupyter-events==0.10.0
 jupyter-lsp==2.2.5
 jupyter-server==2.14.2
+jupyter-server-mathjax==0.2.6
 jupyter-server-terminals==0.5.3
 jupyterlab==4.2.4
 jupyterlab-code-formatter==3.0.1
+jupyterlab-git==0.50.1
+jupyterlab-lsp==5.1.0
 jupyterlab-pygments==0.3.0
 jupyterlab-server==2.27.3
 jupyterlab-widgets==3.0.11
 kiwisolver==1.4.5
+lsprotocol==2023.0.1
 markupsafe==2.1.5
 matplotlib==3.9.1.post1
 matplotlib-inline==0.1.7
 mistune==3.0.2
 nbclient==0.6.8
 nbconvert==7.16.4
+nbdime==4.0.1
 nbformat==5.10.4
 nbmake==1.5.4
 nest-asyncio==1.6.0
@@ -93,17 +102,23 @@ pyproject-api==1.7.1
 pytest==8.3.2
 python-dateutil==2.9.0.post0
 python-json-logger==2.0.7
+python-lsp-jsonrpc==1.1.2
+python-lsp-ruff==2.2.2
+python-lsp-server==1.11.0
+pytoolconfig==1.3.1
 pyyaml==6.0.2
 pyzmq==26.1.0
 referencing==0.35.1
 requests==2.32.3
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
+rope==1.13.0
 rpds-py==0.20.0
 ruff==0.5.7
 send2trash==1.8.3
 setuptools==72.1.0
 six==1.16.0
+smmap==5.0.1
 sniffio==1.3.1
 soupsieve==2.5
 stack-data==0.6.3
@@ -115,6 +130,7 @@ tox==4.17.1
 traitlets==5.14.3
 types-python-dateutil==2.9.0.20240316
 typing-extensions==4.12.2
+ujson==5.10.0
 uri-template==1.3.0
 urllib3==2.2.2
 uv==0.2.34
