--- a/requirements.in
+++ b/requirements.in
@@ -1,5 +1,6 @@
 -c binder/requirements.txt
 -r binder/requirements.in
+importlib-metadata; python_version < "3.9"
 jupyterlab >=3
 jupyterlab-code-formatter >=3.0.0
 jupyterlab-git
