--- a/.github/workflows/notebook.yml
+++ b/.github/workflows/notebook.yml
@@ -2,6 +2,11 @@ name: Notebook
 
 on:
   workflow_dispatch:
+  pull_request:
+    branches:
+      - main
+    paths:
+      - "**/*.ipynb"
 
 jobs:
   pytest:
