--- a/tox.ini
+++ b/tox.ini
@@ -10,7 +10,7 @@ skipsdist = True
 allowlist_externals =
     pytest
 commands =
-    pytest --nbmake {posargs}
+    pytest {posargs}
 description =
     Run all notebooks with pytest
 passenv =
