FIX: print summary of failed pytest job

--- a/.github/workflows/notebook.yml
+++ b/.github/workflows/notebook.yml
@@ -29,5 +29,5 @@ jobs:
       - run: |
           for notebook in $(git ls-files | grep ipynb); do
             uv pip sync requirements.txt --quiet --system
-            pytest $notebook --no-header --no-summary
+            pytest $notebook --no-header
           done
