DX: make all notebooks runnable (#38)
* BREAK: run BESIII notebook with AmpForm v0.12 and TensorWaves v0.4
* DX: cancel duplicate workflow runs
* DX: define Tox job `update` for updating pip requirements
* DX: gitignore `.virtual_documents`
* DX: ignore `B015` and `E402` rules for Jupyter Lab
* DX: install Jupyter Lab extensions such as Git and LSP
* DX: pass all environment variables to `tox` jobs
* DX: pin `actions/setup-python`
* DX: rename `update-constraints` `tox` job to `update`
* DX: run `pytest` from virtual environment
* DX: run `pytest` with `--nbmake` flag by default
* DX: run notebooks independently
* DX: switch to Python 3.10 as developer version
* DX: switch to Python 3.9 as developer version
* DX: trigger notebook workflow on changes to `ipynb`
* DX: update constraints in workflow with `tox` job for consistency
* ENH: install notebook dependencies with `uv`
* FIX: fix dependency conflicts
* FIX: install `matplotlib` in notebook
* MAINT: reduce indentation in `tox.ini`
* MAINT: remove `ypy-websocket` version limit
* MAINT: remove duplicate `pytest` configuration from `tox.ini`
* MAINT: sort keys in `tox.ini`
* MAINT: update pip constraints and pre-commit

--- a/.github/workflows/notebook.yml
+++ b/.github/workflows/notebook.yml
@@ -1,7 +1,19 @@
 name: Notebook
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
+env:
+  UV_SYSTEM_PYTHON: true
+
 on:
   workflow_dispatch:
+  pull_request:
+    branches:
+      - main
+    paths:
+      - "**/*.ipynb"
 
 jobs:
   pytest:
@@ -9,12 +21,16 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-python@master
+      - uses: actions/setup-python@v5
         with:
           python-version: "3.9"
+      - uses: hynek/setup-cached-uv@v2
       - name: Install dependencies
         run: |
           sudo apt-get -y install graphviz
-          pip install tensorflow==2.7 typing-extensions~=3.7.4 wrapt~=1.12.1
-          pip install ipywidgets matplotlib nbmake pytest
-      - run: pytest --nbmake
+          pip install uv
+      - run: |
+          for notebook in $(git ls-files | grep ipynb); do
+            uv pip sync requirements.txt --quiet --system
+            pytest $notebook --no-header
+          done
