--- a/tox.ini
+++ b/tox.ini
@@ -1,30 +1,36 @@
 [tox]
 envlist =
-    sty,
+  sty,
 passenv = PYTHONPATH
 skip_install = True
 skip_missing_interpreters = True
 skipsdist = True
 
 [testenv:nb]
-description =
-    Run all notebooks with pytest
-passenv =
-    EXECUTE_NB
-deps =
-    nbmake
-    pytest
+allowlist_externals =
+  pytest
 commands =
-    pytest --nbmake {posargs}
+  pytest {posargs}
+description =
+  Run all notebooks with pytest
+passenv =
+  *
 
 [testenv:sty]
-description =
-    Perform all linting, formatting, and spelling checks
 allowlist_externals =
-    pre-commit
+  pre-commit
 commands =
-    pre-commit run {posargs} -a
+  pre-commit run {posargs} -a
+passenv =
+  *
 
-[pytest]
-filterwarnings =
-    ignore:Passing a schema to Validator.iter_errors is deprecated.*:DeprecationWarning
+[testenv:update]
+allowlist_externals =
+  uv
+commands =
+  uv pip compile requirements.in -o requirements.txt --no-annotate --strip-extras --upgrade
+  uv pip compile binder/requirements.in -o binder/requirements.txt --no-annotate --strip-extras --upgrade
+description =
+  Update all pip constraint files`
+passenv =
+  *
