--- a/.github/workflows/constraints.yml
+++ b/.github/workflows/constraints.yml
@@ -1,5 +1,9 @@
 name: Requirements
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 on:
   pull_request:
     branches:
@@ -23,10 +27,10 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
         with:
-          python-version: "3.8"
-      - run: pip install uv
-      - run: uv pip compile binder/requirements.in -o binder/requirements.txt --no-annotate --strip-extras --upgrade
-      - run: uv pip compile requirements.in -o requirements.txt --no-annotate --strip-extras --upgrade
+          python-version: "3.9"
+      - uses: hynek/setup-cached-uv@v2
+      - run: pip install tox uv -c requirements.txt
+      - run: tox -e update
       - uses: actions/upload-artifact@v4
         with:
           name: pip-constraints
