--- a/requirements.in
+++ b/requirements.in
@@ -1,8 +1,15 @@
 -c binder/requirements.txt
 -r binder/requirements.in
+importlib-metadata; python_version < "3.9"
 jupyterlab >=3
-jupyterlab-code-formatter
+jupyterlab-code-formatter >=3.0.0
+jupyterlab-git
+jupyterlab-lsp
+nbmake
 pre-commit
+pytest
+python-lsp-ruff
+python-lsp-server[rope]
 ruff
 tox
-ypy-websocket <0.8.3  # dependency conflict
+uv
