DOC: improve Tox job descriptions

--- a/tox.ini
+++ b/tox.ini
@@ -20,6 +20,7 @@ allowlist_externals =
   pre-commit
 commands =
   pre-commit run {posargs} --all-files
+description = Perform all linting, formatting, and spelling checks
 
 [testenv:update]
 allowlist_externals =
