MAINT: move `--all-files` before `{posargs}`

--- a/tox.ini
+++ b/tox.ini
@@ -19,7 +19,7 @@ description = Run all notebooks with pytest
 allowlist_externals =
   pre-commit
 commands =
-  pre-commit run {posargs} --all-files
+  pre-commit --all-files run {posargs}
 description = Perform all linting, formatting, and spelling checks
 
 [testenv:update]
