DX: modernize dev environment with `uv`

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -5,6 +5,7 @@
     "editorconfig.editorconfig",
     "esbenp.prettier-vscode",
     "github.vscode-github-actions",
+    "mhutchie.git-graph",
     "ms-python.python",
     "ms-vsliveshare.vsliveshare",
     "redhat.vscode-yaml",
