--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -48,5 +48,8 @@
   "ruff.enable": true,
   "ruff.importStrategy": "fromEnvironment",
   "ruff.organizeImports": true,
+  "search.exclude": {
+    "**/uv.lock": true
+  },
   "telemetry.telemetryLevel": "off"
 }
