--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,28 @@
+[project]
+name = "compwa-demo"
+requires-python = ">=3.9"
+version = "0.0.0"
+
+[project.optional-dependencies]
+dev = [
+    "compwa-demo[binder]",
+    "jupyterlab >=3",
+    "jupyterlab-code-formatter >=3.0.0",
+    "jupyterlab-git",
+    "jupyterlab-lsp",
+    "nbmake",
+    "pre-commit-uv",
+    "pytest",
+    "python-lsp-ruff",
+    "python-lsp-server[rope]",
+    "ruff",
+    "tox",
+    "uv",
+]
+
+[tool.setuptools.dynamic]
+dependencies = {file = ["binder/requirements.in"]}
+
 [tool.pytest.ini_options]
 addopts = [
     "--color=yes",
@@ -12,7 +37,6 @@ filterwarnings = [
 extend-include = ["*.ipynb"]
 preview = true
 show-fixes = true
-target-version = "py37"
 
 [tool.ruff.format]
 docstring-code-format = true
@@ -90,6 +114,42 @@ sort_first = [
     "tool.setuptools",
     "tool.setuptools_scm",
 ]
-sort_table_keys = true
 spaces_indent_inline_array = 4
 trailing_comma_inline_array = true
+
+[tool.tox]
+legacy_tox_ini = """
+[tox]
+envlist =
+    sty,
+skip_install = True
+skip_missing_interpreters = True
+skipsdist = True
+
+[testenv]
+passenv = *
+
+[testenv:nb]
+allowlist_externals =
+    pytest
+commands =
+    pytest {posargs}
+description = Run all notebooks with pytest
+
+[testenv:sty]
+allowlist_externals =
+    pre-commit
+commands =
+    pre-commit --all-files run {posargs}
+description = Perform all linting, formatting, and spelling checks
+
+[testenv:update]
+allowlist_externals =
+    uv
+    uvx
+commands =
+    uv pip compile binder/requirements.in -o binder/requirements.txt --no-annotate --strip-extras --upgrade
+    uv lock --upgrade
+    uvx pre-commit autoupdate
+description = Update all lock files
+"""
