--- a/.github/workflows/notebook.yml
+++ b/.github/workflows/notebook.yml
@@ -23,14 +23,15 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
         with:
-          python-version: "3.9"
-      - uses: hynek/setup-cached-uv@v2
-      - name: Install dependencies
-        run: |
-          sudo apt-get -y install graphviz
-          pip install uv
+          python-version: "3.10"
+      - uses: astral-sh/setup-uv@v3
+        with:
+          enable-cache: true
+      - name: Install graphviz
+        run: sudo apt-get -y install graphviz
       - run: |
           for notebook in $(git ls-files | grep ipynb); do
-            uv pip sync requirements.txt --quiet --system
+            uv sync --extra dev --quiet
+            source .venv/bin/activate
             pytest $notebook --no-header
           done
