FIX: run `pytest` with `test` dependency group

--- a/.github/workflows/notebook.yml
+++ b/.github/workflows/notebook.yml
@@ -29,4 +29,4 @@ jobs:
           enable-cache: true
       - name: Install graphviz
         run: sudo apt-get -y install graphviz
-      - run: uv run --extra dev pytest
+      - run: uv run --group test --no-dev pytest
