MAINT: update lock files (#41)
* MAINT: implement dev environment updates
* MAINT: remove `enable-cache` argument (defaults to true)
* MAINT: update to `astral-sh/setup-uv@v5`

---------

Co-authored-by: GitHub <noreply@github.com>
Co-authored-by: pre-commit-ci[bot] <66853113+pre-commit-ci[bot]@users.noreply.github.com>

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -8,6 +8,8 @@
     "github.vscode-pull-request-github",
     "mhutchie.git-graph",
     "ms-python.python",
+    "ms-toolsai.jupyter",
+    "ms-toolsai.vscode-jupyter-cell-tags",
     "ms-vsliveshare.vsliveshare",
     "redhat.vscode-yaml",
     "soulcode.vscode-unwanted-extensions",
@@ -25,6 +27,7 @@
     "ms-python.isort",
     "ms-python.mypy-type-checker",
     "ms-python.pylint",
+    "ms-toolsai.vscode-jupyter-slideshow",
     "travisillig.vscode-json-stable-stringify",
     "tyriar.sort-lines"
   ]
